src/components/global.scss
em {
  color: var(--bs-secondary);
}

.text-bg-primary,
.text-bg-secondary,
.text-bg-dark {

  &,
  em {
    color: white;
  }
}

.text-bg-light,
.text-bg-tertiary {

  &,
  em {
    color: black;
  }
}

.text-bg-tertiary {
  border-color: var(--bs-tertiary) !important;
  background-color: var(--bs-tertiary) !important;
}

.fa-amazon {
  vertical-align: middle;
}

ul {
  list-style-type: square;
}

li::marker {
  color: var(--bs-secondary);
}

.active>.page-link {
  background-color: var(--bs-primary);
  border-color: var(--bs-primary);
}

.btn-primary {
  --bs-btn-bg: var(--bs-primary);
  --bs-btn-border-color: var(--bs-primary);
  --bs-btn-hover-bg: var(--bs-primary-hover);
  --bs-btn-hover-border-color: var(--bs-primary-hover);
  --bs-btn-active-bg: var(--bs-primary-active);
  --bs-btn-active-border-color: var(--bs-primary-active);
  --bs-btn-disabled-bg: var(--bs-primary-disabled);
  --bs-btn-disabled-border-color: var(--bs-primary-disabled);
}

.btn-outline-primary {
  --bs-btn-color: var(--bs-primary);
  --bs-btn-border-color: var(--bs-primary);
  --bs-btn-hover-bg: var(--bs-primary-hover);
  --bs-btn-hover-border-color: var(--bs-primary-hover);
}

.btn-secondary {
  --bs-btn-bg: var(--bs-secondary);
  --bs-btn-border-color: var(--bs-secondary);
  --bs-btn-hover-bg: var(--bs-primary-hover);
  --bs-btn-hover-border-color: var(--bs-primary-hover);
  --bs-btn-active-bg: var(--bs-secondary-active);
  --bs-btn-active-border-color: var(--bs-secondary-active);
  --bs-btn-disabled-bg: var(--bs-secondary-disabled);
  --bs-btn-disabled-border-color: var(--bs-secondary-disabled);
}

.btn-outline-secondary {
  --bs-btn-color: var(--bs-secondary);
  --bs-btn-border-color: var(--bs-secondary);
  --bs-btn-hover-bg: var(--bs-primary-hover);
  --bs-btn-hover-border-color: var(--bs-primary-hover);
}

a:not(.btn):not(.nav-link) {
  color: var(--bs-primary);
}

a:not(.btn):not(.nav-link):hover {
  color: var(--bs-hover);
}

.text-bg-secondary {
  a:not(.btn) {
    color: white;
  }

  a:not(.btn):hover {
    color: var(--bs-light);
  }
}

h1,
h2,
h3,
h4,
h5,
.h1,
.h2,
.h3,
.h4,
.h5 {
  font-family: "Iceland", sans-serif;
  font-weight: 400;
  font-style: normal;
}

html,
body {
  font-family: Verdana;
  font-size: 14px;
}

body {
  background-color: var(--bs-primary);
  background-position: center;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  background-color: var(--bs-light);
}

main {
  padding: 3em 0 6em;
  min-height: calc(100vh - 200px);
}

section:not(.nobg),
article {
  padding: 5em 0;
}

section:not(.nobg) .container,
article .container,
.box-flair {
  position: relative;
  background-color: white;
  padding: 0;

  &>div {
    position: relative;
    background-color: white;
    z-index: 100;
    padding: 2em 1em;

    @media only screen and (min-width: 576px) {
      padding: 4em 4em;
    }
  }

  &::before,
  &::after,
  &>div::before,
  &>div::after {
    content: '';
    display: block;
    height: 63px;
    width: 100%;
    position: absolute;
    z-index: 101;
    left: 0;
    background-repeat: repeat-x;
    background-position: left bottom;
  }

  &::before,
  &::after {
    z-index: 99;
    left: 2px;
    width: calc(100% - 2px);
  }

  &>div::before,
  &>div::after {
    z-index: 101;
  }

  &::before,
  &>div::before {
    transform: rotateX(180deg);
  }

  &::before {
    top: -40px;
  }

  &>div::before {
    top: -42px;
  }

  &::after {
    bottom: -42px;
  }

  &>div::after {
    bottom: -40px;
  }

  &>div>.row {
    margin-bottom: -2em;
  }
}

article.newsletter {
  .container::before {
    top: -6px;
    height: 7px;
  }

  .container>div::before {
    top: -8px;
    height: 7px;
  }
}

section.halfwidth {
  @media only screen and (min-width:992px) {
    .container {
      background-color: transparent;
    }

    .container>div {
      max-width: 542px;
    }

    .container::before,
    .container::after {
      width: 540px;
    }
  }
}

h2.pix {
  text-align: center;
  margin-top: 1em;
  margin-bottom: 20px;

  span {
    position: relative;
    display: inline-block;
  }

  span::before,
  span::after {
    content: "";
    width: 23px;
    height: 19px;
    position: absolute;
    right: -40px;
    top: 50%;
    transform: translateY(-50%);
  }

  span::before {
    transform: translateY(-50%) scaleX(-1);
    left: -40px;
  }
}

.form-control,
.form-select,
.form-check-input {
  border-color: rgba(var(--bs-primary-rgb), 0.3);

  &:focus {
    border-color: rgba(var(--bs-primary-rgb), 0.5);
    box-shadow: 0 0 0 .25rem rgba(var(--bs-primary-rgb), .2);
  }
}

.form-check-input:checked {
  border-color: rgba(var(--bs-primary-rgb), 0.5);
  background-color: var(--bs-primary);
}

.form-text {
  color: var(--bs-secondary);
}

form {
  display: flex;
  flex-direction: column;
  gap: 2em;

  input,
  select,
  textarea {
    max-width: 400px;
  }

  legend {
    font-size: 1em;
  }

  .label-required:after {
    content: '*';
  }

  #g-recaptcha>div {
    padding: 2px 2em 0 2px;
    box-sizing: content-box;
  }

}

.result {
  .alert {
    margin-bottom: 0;
  }

  .alert p:last-child {
    margin-bottom: 0;
  }

  .alert-danger {
    margin-top: 2em;
  }
}

.inline-image {
  max-width: 100%;
  text-align: center;
  margin-bottom: 1em;
}

.inline-file object {
  width: 100%;
  aspect-ratio: 8.5/11;
}

